<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.sammyekaran.danda.viewmodel.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/rootLayoutChangePass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/header_color">

            <androidx.appcompat.widget.AppCompatImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{viewModel::back}"
                android:paddingLeft="@dimen/dp_eight"
                android:paddingRight="@dimen/dp_sixteen"
                android:src="@drawable/ic_icon_back_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_eight"
                android:layout_marginBottom="@dimen/dp_eight"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/setting"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_sixteen"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/old_password"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_eight"
                    android:background="@drawable/rounded_color_primary"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/enter_old_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_eight"
                    android:text="@={viewModel.mOldPassword}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_sixteen"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/new_password"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_eight"
                    android:background="@drawable/rounded_color_primary"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_eight"
                    android:text="@={viewModel.mNewPassword}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_sixteen"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/confirm_password"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_eight"
                    android:background="@drawable/rounded_color_primary"
                    android:fontFamily="@font/montserratregular"
                    android:hint="@string/enter_confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_eight"
                    android:text="@={viewModel.mConfirmPassword}" />


                <Button
                    android:id="@+id/buttonSubmit"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/dp_two_fourty"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_fifty_six"
                    android:layout_marginBottom="@dimen/dp_sixteen"
                    android:background="@drawable/button_effect"
                    android:fontFamily="@font/montserratmedium"
                    android:onClick="@{viewModel::onSubmit}"
                    android:padding="@dimen/dp_twelve"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
