<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/header_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_eight"
            android:paddingRight="@dimen/dp_sixteen"
            android:src="@drawable/ic_icon_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_eight"
            android:layout_marginBottom="@dimen/dp_eight"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/phone_verification"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/enter_verification_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserratregular"
                android:gravity="center_horizontal"
                android:text="@string/please_enter_verifivation_code" />

            <com.mukesh.OtpView
                android:id="@+id/otpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:inputType="number"
                android:itemBackground="@color/colorLightGrey"
                android:textColor="@android:color/black"
                app:OtpItemCount="6"
                app:OtpCursorColor="@android:color/black"
                app:OtpLineColor="@color/colorLightGrey"
                app:OtpViewType="rectangle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/can_t_receive_sms" />

                <TextView
                    android:id="@+id/tvResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_1"
                    android:background="@drawable/primary_bottom_single_line"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/resend_code"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
